<resources>
    <string name="app_name">Minesweeper</string>
    <string name="new_game">New Game</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="game_over" translatable="false">BOOOOOM</string>
    <string name="game_won">COMPLETED!</string>
    <string name="menu_restart_game">Restart game</string>
    <string name="change_lenguage">Change lenguage</string>
    <string name="go_to_menu">Go to menu</string>
    <string name="language">Language</string>
    <string name="lang_spanish" translatable="false">Español</string>
    <string name="lang_english" translatable="false">English</string>
    <string name="lang_russian" translatable="false">Русский</string>
    <string-array name="lang_array">
        <item>@string/lang_english</item>
        <item>@string/lang_spanish</item>
        <item>@string/lang_russian</item>
    </string-array>
    <string name="dif_normal">Normal (9x9, 10 mines)</string>
    <string name="dif_hard">Hard (15x15, 20 mines)</string>
    <string name="dif_very_hard">Very hard (18x18, 30 mines)</string>
    <string name="dif">Difficulty</string>
    <string name="mines_left">"Mines left: "</string>
    <string name="about_version">Version: 1.0</string>
    <string name="about_author">Author: Oleksandr Malyga</string>
</resources>
